--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             overflow: hidden;
         }
 
-        /* Vintage effects */
+        /* Vintage effect */
         .tube-light {
             position: absolute;
             background: linear-gradient(90deg, 
