--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             opacity: 1;
         }
 
-        /* Generate film holes dynamically */
+        /*film holes dynamically */
         .film-strip::before {
             content: '';
             position: absolute;
